@@ -71,7 +71,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Entry Point to define reactive Policy Enforcement Points. This Factory has the capability to
@@ -188,7 +187,6 @@ public class RxPepFactory {
     if (annotation != null) {
       final String parameterName = annotation.name();
       final String description = annotation.description();
-      parameterType = annotation.type().equals(Void.class) ? parameterType : annotation.type();
       return new InputParameterDescription(parameterName, description, annotation.mandatory(),
           parameterType);
     }
@@ -292,7 +290,7 @@ public class RxPepFactory {
     final List<PepInterfaceDescription> duplicateInterfaceDescriptions = interfaceDescriptions
         .stream().filter(existingDescription -> existingDescription.getEvent()
             .equals(pepInterfaceDescription.getEvent()))
-        .collect(Collectors.toList());
+        .toList();
     if (!duplicateInterfaceDescriptions.isEmpty()) {
       throw new IncorrectPepDescriptionError(
           "The event " + pepInterfaceDescription.getEvent() + " for more then one enforcements.");
@@ -302,17 +300,14 @@ public class RxPepFactory {
   /**
    * Filters annotations of type given annotation class.
    *
-   * @param  <T>             the generic type
-   * @param  annotations     the annotations
-   * @param  annotationClass the annotation class
-   * @return                 the annotation of type given annotation class or it returns NULL if
-   *                         there is non.
+   * @param annotations the annotations
+   * @return the annotation of type EventParameter or it returns NULL if
+   * there is no such.
    */
-  private static <T> T filter(Annotation[] annotations, Class<T> annotationClass) {
+  private static EventParameter findEventParameterAnnotation(Annotation[] annotations) {
     for (final Annotation annotation : annotations) {
-      if (annotationClass.isInstance(annotation)) {
-        // noinspection unchecked
-        return (T) annotation;
+      if (annotation instanceof EventParameter eventParameterAnnotation) {
+        return eventParameterAnnotation;
       }
     }
     return null;
@@ -326,7 +321,7 @@ public class RxPepFactory {
    * @return                     PepType
    */
   public static <T> PepType findAPIDocumentationType(final Class<T> pepDocumentationApi) {
-    if (isValidDocumentation(pepDocumentationApi).getKey()) {
+    if (Boolean.TRUE.equals(isValidDocumentation(pepDocumentationApi).getKey())) {
       return PepType.REACTIVE;
     }
     return PepType.INVALID;
@@ -488,9 +483,9 @@ public class RxPepFactory {
   private static List<InputParameterDescription> readEventParameterDetails(Method method) {
     final List<InputParameterDescription> inputParameterDescriptions = new ArrayList<>();
     final Parameter[] parameters = method.getParameters();
-    final Annotation[][] annotation = method.getParameterAnnotations();
-    for (int i = 0; i < annotation.length; i++) {
-      final EventParameter pepParamKey = filter(annotation[i], EventParameter.class);
+    final Annotation[][] parameterAnnotations = method.getParameterAnnotations();
+    for (int i = 0; i < parameterAnnotations.length; i++) {
+      final EventParameter pepParamKey = findEventParameterAnnotation(parameterAnnotations[i]);
       if (pepParamKey != null) {
         inputParameterDescriptions
             .add(new InputParameterDescription(pepParamKey.name(), pepParamKey.description(), true,
@@ -586,7 +581,7 @@ public class RxPepFactory {
   private static <T> void validateMethodReturnType(final Class<T> pepDocumentationApi) {
     final Pair<Boolean, RuntimeException> booleanRuntimeExceptionPair = isValidDocumentation(
         pepDocumentationApi);
-    if (!booleanRuntimeExceptionPair.getKey()) {
+    if (Boolean.FALSE.equals(booleanRuntimeExceptionPair.getKey())) {
       throw booleanRuntimeExceptionPair.getValue();
     }
   }
